Added sli.do link as <a>

--- a/aws/en/day3.html
+++ b/aws/en/day3.html
@@ -48,6 +48,7 @@
         <section>
             <h1>Live questions</h1>
             <img src="qrcodeLink-questions.png" alt="Questions QRcode link" class="qrCodeLink"/>
+            <p><a href="https://www.sli.do/#R787">Sli.do/#R787</a></p>
         </section>
 
         <section>
