Added day 4 of English AWS week

--- a/aws/en/day3.html
+++ b/aws/en/day3.html
@@ -274,8 +274,8 @@
                 </h2>
 
                 <ul>
-                    <li>Memory 128MB - 3008 MB, skok co 64 MB</li>
-                    <li>Timeout - 15 minut</li>
+                    <li>Memory 128MB - 3008 MB, hop of 64 MB</li>
+                    <li>Timeout - 15 minutes</li>
                     <li>Env vars - 4 KB</li>
                     <li>IAM policy - 20 KB</li>
                     <li>layers - 5</li>
@@ -419,7 +419,7 @@
 
             <section>
                 <h2>
-                    <img src="../../images/logos/aws-services-logos/lambda.svg" class="logoImage" style="max-height:4rem; margin:0;"/>
+                    <img src="../../images/logos/aws-services-logos/s3.svg" class="logoImage" style="max-height:4rem; margin:0;"/>
                     S3 Bucket
                 </h2>
 
@@ -439,7 +439,7 @@
 
             <section>
                 <h2>
-                    <img src="../../images/logos/aws-services-logos/lambda.svg" class="logoImage" style="max-height:4rem; margin:0;"/>
+                    <img src="../../images/logos/aws-services-logos/s3.svg" class="logoImage" style="max-height:4rem; margin:0;"/>
                     Storage types (S3)
                 </h2>
 
