--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
             <h2>Talks index</h2>
 
             <ul>
-                <li><a href="aws/pl/">AWS services</a></li>
+                <li><a href="aws/">AWS services</a></li>
                 <li><a href="lambda-functions/pl/">AWS Lambda Functions</a></li>
                 <li><a href="docker/">Docker from scratch</a></li>
                 <li><a href="docker&k8s/pl/">Docker & Kubernetes</a></li>
-                <li><a href="js-event-loop/demo">JS Event Loop demos</a></li>
+                <li><a href="js-event-loop/">JS Event Loop</a></li>
+                <li><a href="js-event-loop/demo/">JS Event Loop demos</a></li>
                 <li><a href="k8s-selenium-grid">Kubernetes Selenium Grid</a></li>
                 <li><a href="serverless-development/pl/">Serverless development</a></li>
+                <li><a href="aws-app-mesh/pl/">AWS App Mesh</a></li>
             </ul>
         </section>
     </div>
