--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="k8s-selenium-grid">Kubernetes Selenium Grid</a></li>
                 <li><a href="serverless-development/pl/">Serverless development</a></li>
                 <li><a href="aws-app-mesh/pl/">AWS App Mesh</a></li>
+                <li><a href="ssl/pl/">SSL</a></li>
             </ul>
         </section>
     </div>
