--- a/ssl/pl/index.html
+++ b/ssl/pl/index.html
@@ -234,6 +234,8 @@ report-request.com.  IN  CAA 0 iodef "http://iodef.example.com/"
         <section>
             <section>
                 <h2>Let's Encrypt</h2>
+
+                <img src="../images/le_logo3.png" />
             </section>
 
             <section>
