--- a/ssl/pl/index.html
+++ b/ssl/pl/index.html
@@ -246,7 +246,9 @@ report-request.com.  IN  CAA 0 iodef "http://iodef.example.com/"
         </section>
 
         <section>
-            <section>Private certification authorities</section>
+            <section>
+                <h2>Private certification authorities</h2>
+            </section>
 
             <section>
                 <h3>Przykłady:</h3>
