--- a/ssl/pl/index.html
+++ b/ssl/pl/index.html
@@ -269,24 +269,13 @@ report-request.com.  IN  CAA 0 iodef "http://iodef.example.com/"
             </section>
 
             <section>
-                <h2>Plusy</h2>
+                <h2>Podsumowanie</h2>
 
                 <ol>
-                    <li>Function-as-a-service</li>
-                    <li class="fragment fade-up">Event-driven invocations</li>
-                    <li class="fragment fade-up">Płatność za każde wywołanie</li>
-                    <li class="fragment fade-up">Przezroczyste skalowanie</li>
-                    <li class="fragment fade-up">Mniej ludzkich zasobów przeznaczonych na infrastrukturę</li>
-                </ol>
-            </section>
-
-            <section>
-                <h2>Minusy</h2>
-
-                <ol>
-                    <li>vendor lock-in</li>
-                    <li>próg wejścia</li>
-                    <li>przeznaczone raczej do szybkich zadań</li>
+                    <li>weryfikacja zdalnego podmiotu</li>
+                    <li class="fragment fade-up">ustalenie symetrycznego klucza</li>
+                    <li class="fragment fade-up">3 metody poświadczenia podmiotu</li>
+                    <li class="fragment fade-up">TLS Handshake</li>
                 </ol>
             </section>
         </section>
